# MeshLib

docs/standalone-implementation/: IMPLEMENTATION_PLAN.md
docs/standalone-implementation/phases/: PHASE_0_OVERVIEW.md  PHASE_1_PROJECT_SETUP.md  PHASE_2_MRMESH_CORE.md  PHASE_3_MRVOXELS_OPENVDB.md  PHASE_4_PYTHON_BINDINGS.md  PHASE_5_WEBASSEMBLY.md  PHASE_6_THREEJS_INTEGRATION.md
meshlib-core/: .gitignore  CMakeLists.txt  CMakePresets.json  IMPLEMENTATION_GUIDE.md  README.md
meshlib-core/bindings/c/: CMakeLists.txt  meshlib_c.cpp  meshlib_c.h
meshlib-core/bindings/python/: CMakeLists.txt  __init__.py  bindings.cpp
meshlib-core/bindings/wasm/: CMakeLists.txt  bindings.cpp  meshlib.d.ts  three_integration.ts
meshlib-core/cmake/: meshlib_core-config.cmake.in
meshlib-core/examples/cpp/: CMakeLists.txt  boolean_example.cpp  decimate_example.cpp  icp_example.cpp
meshlib-core/examples/web/: index.html
meshlib-core/include/meshlib/: config.h.in  meshlib.h
meshlib-core/include/meshlib/algorithms/: Boolean.h  Decimate.h  FillHole.h  ICP.h  Smooth.h  Subdivide.h
meshlib-core/include/meshlib/core/: AffineXf.h  BitSet.h  Box.h  Expected.h  Id.h  IdVector.h  Line.h  Matrix.h  MeshBoundary.h  MeshComponents.h  MeshDistance.h  MeshEdgePoint.h  MeshFixer.h  MeshNormals.h  MeshProject.h  MeshTriPoint.h  Plane.h  Quaternion.h  Sphere.h  Types.h  UnionFind.h  Vector.h
meshlib-core/include/meshlib/io/: MeshIO.h
meshlib-core/include/meshlib/mesh/: Mesh.h  MeshTopology.h  PointCloud.h  Primitives.h
meshlib-core/include/meshlib/spatial/: AABBTree.h  AABBTreeNode.h
meshlib-core/src/algorithms/: Boolean.cpp  Decimate.cpp  FillHole.cpp  ICP.cpp  Smooth.cpp  Subdivide.cpp
meshlib-core/src/io/: MeshIO.cpp
meshlib-core/src/mesh/: Mesh.cpp  MeshTopology.cpp  PointCloud.cpp  Primitives.cpp
meshlib-core/src/spatial/: AABBTree.cpp
meshlib-core/tests/: CMakeLists.txt  test_box.cpp  test_decimate.cpp  test_fillhole.cpp  test_icp.cpp.disabled  test_io.cpp  test_main.cpp  test_matrix.cpp  test_mesh.cpp  test_pointcloud.cpp  test_primitives.cpp  test_smooth.cpp  test_subdivide.cpp  test_vector.cpp
